--- a/deploy/service-tester/values.yaml
+++ b/deploy/service-tester/values.yaml
@@ -3,7 +3,7 @@ args: ["pip install schedule; pip install requests; python3 -u /scripts/job.py"]
 image:
   repository: 'python'
   tag: '3.12.5-slim@sha256:59c7332a4a24373861c4a5f0eec2c92b87e3efeb8ddef011744ef9a751b1d11c'
-  pullPolicy: always
+  pullPolicy: Always
 resources:
   requests:
     cpu: 20m
