--- a/deploy/service-tester/values.yaml
+++ b/deploy/service-tester/values.yaml
@@ -12,5 +12,5 @@ resources:
     memory: 75Mi
 env:
   normal:
-    SERVICE_TESTER_ENDPOINTS: '${SERVICE_TESTER_ENDPOINTS}'
-    SERVICE_TESTER_SCHEDULE_SECONDS: '${SERVICE_TESTER_SCHEDULE_SECONDS}'
+    SERVICE_TESTER_ENDPOINTS: 'https://google.com'
+    SERVICE_TESTER_SCHEDULE_SECONDS: '20'
